--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "basisreact",
+  "name": "shop",
   "version": "1.0.0",
-  "description": "выпускной проект на React",
+  "description": "Plant shop",
   "main": "App.js",
   "scripts": {
     "builddev": "cross-env NODE_ENV=development .//node_modules//.bin//webpack-dev-server --progress --colors --history-api-fallback",
     "buildprod": "cross-env NODE_ENV=production .//node_modules//.bin//webpack --progress",
-    "browse": ".\\node_modules\\.bin\\lite-server",
+    "startLite": ".\\node_modules\\.bin\\lite-server",
     "test": "jest"
   },
   "author": "Andrei Bialou",
@@ -40,7 +40,10 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.3.0"
   },
   "jest": {
     "moduleNameMapper": {
